# cryptoauthlib

./: .gitattributes  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  SECURITY.md  a00005.html  a00005.js  a00008.html  a00008.js  a00011.html  a00011.js  a00011_source.html  a00014.html  a00014.js  a00014_source.html  a00017.html  a00017.js  a00017_source.html  a00020.html  a00020.js  a00020_source.html  a00023.html  a00023.js  a00023_source.html  a00026.html  a00026.js  a00026_source.html  a00029.html  a00029.js  a00029_source.html  a00032.html  a00032.js  a00032_source.html  a00035.html  (+10075 more)
lib/: CMakeLists.txt  Makefile  README.md  atca_basic.c  atca_basic.h  atca_bool.h  atca_cfgs.c  atca_cfgs.h  atca_command.c  atca_command.h  atca_compiler.h  atca_config.h  atca_config.h.in  atca_config_check.h  atca_debug.c  atca_debug.h  atca_device.c  atca_device.h  atca_devtypes.h  atca_execution.c  atca_execution.h  atca_helpers.c  atca_helpers.h  atca_iface.c  atca_iface.h  atca_platform.h  atca_status.h  atca_utils_sizes.c  atca_version.h  cal_buffer.c  cal_buffer.h  cal_internal.h  cmake_install.cmake  cryptoauthlib.h
lib/atcacert/: MIGRATION.md  atcacert.h  atcacert_check_config.h  atcacert_client.c  atcacert_client.h  atcacert_date.c  atcacert_date.h  atcacert_def.c  atcacert_def.h  atcacert_der.c  atcacert_der.h  atcacert_host_hw.c  atcacert_host_hw.h  atcacert_host_sw.c  atcacert_host_sw.h  atcacert_pem.c  atcacert_pem.h
lib/basic/: atca_basic.c  atca_basic.h  atca_basic_aes.c  atca_basic_aes_cbc.c  atca_basic_aes_cmac.c  atca_basic_aes_ctr.c  atca_basic_aes_gcm.c  atca_basic_aes_gcm.h  atca_basic_checkmac.c  atca_basic_counter.c  atca_basic_derivekey.c  atca_basic_ecdh.c  atca_basic_gendig.c  atca_basic_genkey.c  atca_basic_hmac.c  atca_basic_info.c  atca_basic_kdf.c  atca_basic_lock.c  atca_basic_mac.c  atca_basic_nonce.c  atca_basic_privwrite.c  atca_basic_random.c  atca_basic_read.c  atca_basic_secureboot.c  atca_basic_selftest.c  atca_basic_sha.c  atca_basic_sign.c  atca_basic_updateextra.c  atca_basic_verify.c  atca_basic_write.c  atca_helpers.c  atca_helpers.h
lib/calib/: README.md  calib_aes.c  calib_aes_gcm.c  calib_aes_gcm.h  calib_basic.c  calib_basic.h  calib_checkmac.c  calib_command.c  calib_command.h  calib_config_check.h  calib_counter.c  calib_delete.c  calib_derivekey.c  calib_device.h  calib_ecdh.c  calib_execution.c  calib_execution.h  calib_gendig.c  calib_genkey.c  calib_helpers.c  calib_hmac.c  calib_info.c  calib_kdf.c  calib_lock.c  calib_mac.c  calib_nonce.c  calib_packet.c  calib_packet.h  calib_privwrite.c  calib_random.c  calib_read.c  calib_secureboot.c  calib_selftest.c  calib_sha.c  calib_sign.c  calib_updateextra.c  calib_verify.c  calib_write.c
lib/cmake/: devices.cmake  mbedtls.cmake  pkcs11.cmake  wolfssl.cmake
lib/crypto/: atca_crypto_hw_aes.h  atca_crypto_hw_aes_cbc.c  atca_crypto_hw_aes_cbcmac.c  atca_crypto_hw_aes_ccm.c  atca_crypto_hw_aes_cmac.c  atca_crypto_hw_aes_ctr.c  atca_crypto_pad.c  atca_crypto_pbkdf2.c  atca_crypto_sw.h  atca_crypto_sw_aes_cmac.c  atca_crypto_sw_aes_gcm.c  atca_crypto_sw_ecdsa.c  atca_crypto_sw_ecdsa.h  atca_crypto_sw_rand.c  atca_crypto_sw_rand.h  atca_crypto_sw_sha1.c  atca_crypto_sw_sha1.h  atca_crypto_sw_sha2.c  atca_crypto_sw_sha2.h  crypto_config_check.h  crypto_hw_config_check.h  crypto_sw_config_check.h
lib/hal/: README.md  atca_hal.c  atca_hal.h  atca_start_config.h  atca_start_iface.h  hal_all_platforms_kit_hidapi.c  hal_all_platforms_kit_hidapi.h  hal_arduino.cpp  hal_arduino.h  hal_arduino_twi.c  hal_arduino_twi.h  hal_at90usb1287_i2c_asf.c  hal_at90usb1287_i2c_asf.h  hal_at90usb1287_timer_asf.c  hal_esp32_i2c.c  hal_esp32_timer.c  hal_freertos.c  hal_harmony.h  hal_i2c_bitbang.c  hal_i2c_bitbang.h  hal_i2c_harmony.c  hal_i2c_start.c  hal_i2c_start.h  hal_kit_bridge.c  hal_kit_bridge.h  hal_linux.c  hal_linux_i2c_userspace.c  hal_linux_i2c_userspace.h  hal_linux_kit_cdc.c  hal_linux_kit_cdc.h  hal_linux_kit_hid.c  hal_linux_kit_hid.h  hal_linux_spi_userspace.c  hal_linux_spi_userspace.h  hal_linux_timer.c  hal_linux_uart_userspace.c  hal_pic32mx695f512h_i2c.c  hal_pic32mx695f512h_i2c.h  hal_pic32mx695f512h_timer.c  hal_pic32mz2048efm_i2c.c  (+63 more)
lib/host/: atca_host.c  atca_host.h  atca_host_config_check.h
lib/jwt/: atca_jwt.c  atca_jwt.h
lib/mbedtls/: README.md  atca_mbedtls_ecdh.c  atca_mbedtls_ecdsa.c  atca_mbedtls_interface.h  atca_mbedtls_wrap.c  atca_mbedtls_wrap.h
lib/openssl/: atca_openssl_interface.c  atca_openssl_interface.h
lib/pkcs11/: cryptoki.h  pkcs11.h  pkcs11_attrib.c  pkcs11_attrib.h  pkcs11_cert.c  pkcs11_cert.h  pkcs11_config.c  pkcs11_config.c.orig  pkcs11_config.h  pkcs11_config.h.in  pkcs11_debug.c  pkcs11_debug.h  pkcs11_digest.c  pkcs11_digest.h  pkcs11_encrypt.c  pkcs11_encrypt.h  pkcs11_find.c  pkcs11_info.c  pkcs11_init.c  pkcs11_init.h  pkcs11_key.c  pkcs11_key.h  pkcs11_main.c  pkcs11_mech.c  pkcs11_mech.h  pkcs11_object.c  pkcs11_object.h  pkcs11_os.c  pkcs11_os.h  pkcs11_session.c  pkcs11_session.h  pkcs11_signature.c  pkcs11_slot.c  pkcs11_slot.h  pkcs11_token.c  pkcs11_token.h  pkcs11_util.c  pkcs11_util.h  pkcs11t.h
lib/tls/: atcatls.c  atcatls.h  atcatls_cfg.c  (+1 more)
test/: CMakeLists.txt  README.md  atca_basic_tests.c  atca_basic_tests.h  atca_crypto_sw_tests.c  atca_crypto_sw_tests.h  atca_test.c  atca_test.h  atca_test_config.c  atca_test_console.c  atca_tests.h  atca_tests_aes.c  atca_tests_aes_cbc.c  atca_tests_aes_cmac.c  atca_tests_aes_ctr.c  atca_tests_aes_gcm.c  atca_tests_counter.c  atca_tests_derivekey.c  atca_tests_ecdh.c  atca_tests_gendig.c  atca_tests_genkey.c  atca_tests_helper.c  atca_tests_hmac.c  atca_tests_info.c  atca_tests_kdf.c  atca_tests_lock.c  atca_tests_mac.c  atca_tests_nonce.c  atca_tests_otpzero.c  atca_tests_pause.c  atca_tests_privwrite.c  atca_tests_random.c  atca_tests_read.c  atca_tests_secureboot.c  atca_tests_selftest.c  atca_tests_sha.c  atca_tests_sign.c  atca_tests_startup.c  atca_tests_updateextra.c  atca_tests_verify.c  (+17 more)
(+2777 files in other folders)
